--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "program": "${workspaceRoot}/test/main.go",
             "env": {},
-            "args": ["t", "foo", "a", "b", "c", "--a", "--c=lol", "--c=bruh", "--b=wtf", "--d=eeh", "--e=wh", "--e=at"],
+            "args": ["t"],
             "showLog": true
         }
     ]
