--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "program": "${workspaceRoot}/test/main.go",
             "env": {},
-            "args": ["t"],
+            "args": ["-v", "test", "sup", "dude", "foo"],
             "showLog": true
         }
     ]
