--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "program": "${workspaceRoot}/test/main.go",
             "env": {},
-            "args": ["child-a", "child-b", "offspring-d", "-nbro"],
+            "args": ["child-a", "-nqv"],
             "showLog": true
         }
     ]
